WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269025
REGRESSION(
273517@main
): `findString:` skips every other match in PDFs
https://bugs.webkit.org/show_bug.cgi?id=269025
Summary
REGRESSION(273517@main): `findString:` skips every other match in PDFs
Charlie Wolfe
Reported
2024-02-08 15:47:56 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-08 15:52:08 PST
<
rdar://problem/122588827
>
Charlie Wolfe
Comment 2
2024-02-08 15:55:04 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24105
EWS
Comment 3
2024-02-09 01:10:55 PST
Committed
274352@main
(f506eadd86a5): <
https://commits.webkit.org/274352@main
> Reviewed commits have been landed. Closing PR #24105 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug