REGRESSION(273517@main): `findString:` skips every other match in PDFs https://bugs.webkit.org/show_bug.cgi?id=269025 rdar://122588827

Reviewed by Sammy Gill.

To prepare for site isolation, 273517@main made changes to have separate IPC messages for searching web
processes for a string and setting selection. To make this work correctly, I added `DoNotSetSelection`
to the `FindOptions` enum to indicate that a `FindString` message should be limited to search. However,
`PDFPlugin::findString()` did not respect this flag, so the selection would be updated twice for each
`FindString` message. Fix this by early returning before setting selection in `PDFPlugin::findString()`
when the `DoNotSetSelection` flag is set.

* Source/WebKit/WebProcess/Plugins/PDF/PDFPlugin.mm:
(WebKit::PDFPlugin::findString):

Canonical link: https://commits.webkit.org/274352@main